tests/builder/ui/bo_typ_setter_unavailable.stderr
error[E0432]: unresolved import `rubo4e::v202501`
 --> tests/builder/ui/bo_typ_setter_unavailable.rs:1:13
  |
1 | use rubo4e::v202501::{BoTyp, Vertrag};
  |             ^^^^^^^ could not find `v202501` in `rubo4e`
